# climeat

./: .gitignore  README.md  dev.env  docker-compose.yaml  eks.env
config/: otel-collector.yaml
config/datasources/: datasource.yaml
config/tempo/: tempo.yaml
kube/: README.md  kustomization.yaml  namespace.yaml
kube/app/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
kube/database/: ingress.yaml  kustomization.yaml  service.yaml  statefulset.yaml
services/climeat/: alembic.ini  prestart.sh  pyproject.toml  run.sh
services/climeat/alembic/versions/: 55196e022f65_create_cities_city_responses_tables.py
services/climeat/app/: backend_pre_start.py  initial_data.py  main.py
services/climeat/app/crud/: __init__.py  crud_city.py  crud_city_population.py  crud_city_response.py  crud_count.py  crud_meat_city.py
services/climeat/app/db/: init_db.py  session.py
services/climeat/app/models/: city.py  city_population.py  city_response.py
services/climeat/app/schemas/: __init__.py  city.py  city_population.py  city_response.py  meat_city.py
services/climeat/docker/: Dockerfile  start.sh
